--- a/frontend/public/admin.html
+++ b/frontend/public/admin.html
@@ -6,6 +6,8 @@
   <title>Admin Dashboard - ShopHub</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🛍️</text></svg>">
+  <!-- Configuration -->
+  <script src="config.js"></script>
 </head>
 <body>
   <nav>
@@ -180,7 +182,7 @@
 
     async function loadProducts() {
       try {
-        const res = await fetch('http://localhost:5000/api/products');
+        const res = await fetch(getApiUrl('/api/products'));
         const products = await res.json();
         const table = document.getElementById('product-table');
         const stats = document.getElementById('product-stats');
@@ -222,7 +224,7 @@
         btn.addEventListener('click', async function() {
           const id = this.getAttribute('data-id');
           try {
-            const res = await fetch(`http://localhost:5000/api/products/${id}`);
+            const res = await fetch(getApiUrl(`/api/products/${id}`));
             const product = await res.json();
             document.getElementById('product-id').value = product.id;
             document.getElementById('product-name').value = product.name;
@@ -243,7 +245,7 @@
           
           const id = this.getAttribute('data-id');
           try {
-            await fetch(`http://localhost:5000/api/products/${id}`, { method: 'DELETE' });
+            await fetch(getApiUrl(`/api/products/${id}`), { method: 'DELETE' });
             loadProducts();
             showNotification('Product deleted successfully', 'success');
           } catch (error) {
@@ -265,14 +267,14 @@
       
       try {
         if (id) {
-          await fetch(`http://localhost:5000/api/products/${id}`, {
+          await fetch(getApiUrl(`/api/products/${id}`), {
             method: 'PUT',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(product)
           });
           showNotification('Product updated successfully', 'success');
         } else {
-          await fetch('http://localhost:5000/api/products', {
+          await fetch(getApiUrl('/api/products'), {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(product)
