--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -10,6 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+  <!-- Configuration -->
+  <script src="config.js"></script>
 </head>
 <body>
   <!-- Enhanced Navigation -->
@@ -155,7 +157,7 @@
       const password = document.getElementById('password').value;
       
       try {
-        const res = await fetch('http://localhost:5000/api/login', {
+        const res = await fetch(getApiUrl('/api/login'), {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ username, password })
